--- a/index.html
+++ b/index.html
@@ -35,21 +35,30 @@
       </nav>
     <h1><p class="text-center pt-5 " >FINAU.</p> </h1>
      <P> <p class="text-center">2D PROGRAMAÇÃO</p>
+      <div class="card" style="width: 20rem;">
+        <img src="img/toninho.jpeg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">CALABRESO</h5>
+          <p class="card-text"></p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+        <div class="card" style="width: 20rem;">
+          <img src="img/mussum.jpeg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">OVO FRITIS</h5>
+            <p class="card-text"></p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+          <div class="card" style="width: 20rem;">
+            <img src="img/angolano-drip.jpeg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">DRIP PURO</h5>
+              <p class="card-text"></p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+      </div>
 </P>
-    <div>
-        <img class="imagem" src="img/opalavermelho.jpeg" alt@import url("styles/header.css");
-
-        :root{
-         --cor-de-fundo: #e9e6e6;
-         --branco: #FFFFFF;
-         --laranja: #e2b213;
-         --amarelo: #fecd2f;
-         --roxo-degrade: linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
-         --preto: #000000;
-        
-        …="">
-        
-    </div>
+   
    
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
